--- a/Wildberris/index.html
+++ b/Wildberris/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.css">
+	
 </head>
 <!-- class="show-goods" -->
 
@@ -611,6 +612,8 @@
 			</form>
 		</div>
 	</div>
+
+	<script src="js/srcipt.js"></script>
 </body>
 
 </html>
